[gd_scene load_steps=30 format=3 uid="uid://dho6c4cjc01tr"]

[ext_resource type="Script" uid="uid://bh08td0jt756i" path="res://entities/npcs/npc3/npc_3.gd" id="1_3qgwk"]
[ext_resource type="Shader" uid="uid://dmn0dmxfshr1d" path="res://resources/shaders/hit_flash.gdshader" id="1_s6pod"]
[ext_resource type="Texture2D" uid="uid://d1plxe101a57f" path="res://assets/characters/npcs/enemies/Drons png.png" id="2_3qgwk"]
[ext_resource type="PackedScene" uid="uid://cwormf6p6oqbo" path="res://entities/npcs/npc1/npc_1_bullet.tscn" id="2_sf50l"]
[ext_resource type="PackedScene" uid="uid://cmbpwc3svcncr" path="res://entities/npcs/npcs_state_machine.tscn" id="3_wteq8"]
[ext_resource type="Script" uid="uid://b5tr001te8fj" path="res://entities/npcs/npc3/states/idle.gd" id="4_s6pod"]
[ext_resource type="Script" uid="uid://bowicp3a5dn0t" path="res://entities/npcs/npc3/states/wander.gd" id="5_3qgwk"]
[ext_resource type="Texture2D" uid="uid://i25oxs252boe" path="res://assets/envirement/Protoype/texture_03.png" id="5_r048q"]
[ext_resource type="Script" uid="uid://cipoe1wbisd7c" path="res://entities/npcs/npc3/states/chase.gd" id="6_wteq8"]
[ext_resource type="Script" uid="uid://bkt47dytpas6p" path="res://entities/npcs/npc3/states/cool_down.gd" id="7_63y8b"]
[ext_resource type="Script" uid="uid://bbt544rbuqqot" path="res://entities/npcs/npc3/states/shoot.gd" id="8_5dooj"]
[ext_resource type="Script" uid="uid://ded7bqbgu5sfx" path="res://entities/npcs/npc3/states/reload.gd" id="9_cufvy"]
[ext_resource type="Script" uid="uid://midtca1lj1lk" path="res://entities/npcs/npc3/states/talk.gd" id="10_ylrrh"]
[ext_resource type="Script" uid="uid://d5c1dq6cfdgj" path="res://entities/npcs/npc3/states/damage.gd" id="11_lvt0o"]
[ext_resource type="Script" uid="uid://b5isuix0reaq1" path="res://entities/npcs/npc3/states/die.gd" id="12_v5k5e"]
[ext_resource type="Script" uid="uid://hct8g0dwy6rm" path="res://utilities/dialogues/dialogue_box.gd" id="13_f1h1s"]
[ext_resource type="LabelSettings" uid="uid://ck3j7eyrm2267" path="res://resources/labels/dialogues_label_settings.tres" id="14_g2a3x"]
[ext_resource type="Texture2D" uid="uid://bk3ipmaetj1hl" path="res://assets/vfx/particle_material.png" id="15_gv085"]
[ext_resource type="Script" uid="uid://lngqm66mqljp" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="17_5tgme"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cv67u"]
size = Vector2(32, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvi5a"]
resource_local_to_scene = true
shader = ExtResource("1_s6pod")
shader_parameter/flashColor = Color(1, 1, 1, 1)
shader_parameter/flashValue = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r048q"]
size = Vector2(272, 192)

[sub_resource type="Animation" id="Animation_okxx1"]
resource_name = "Death"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_a4b5n"]
resource_name = "Idle"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f2xjk"]
resource_name = "Reloading"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_dpk7x"]
resource_name = "Running"
length = 0.4
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_57c1o"]
resource_name = "Shooting"
length = 0.24
step = 0.02

[sub_resource type="Animation" id="Animation_kcs6m"]
resource_name = "Talking"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fbn5t"]
_data = {
&"Death": SubResource("Animation_okxx1"),
&"Idle": SubResource("Animation_a4b5n"),
&"Reloading": SubResource("Animation_f2xjk"),
&"Running": SubResource("Animation_dpk7x"),
&"Shooting": SubResource("Animation_57c1o"),
&"Talking": SubResource("Animation_kcs6m")
}

[node name="NPC" type="CharacterBody2D" node_paths=PackedStringArray("idleState", "wanderingState", "chasingState", "cooldownState", "shootingState", "reloadingState", "talkingState", "damagingState", "deathState")]
script = ExtResource("1_3qgwk")
idleState = NodePath("NPCsStateMachine/Idle")
wanderingState = NodePath("NPCsStateMachine/Wander")
chasingState = NodePath("NPCsStateMachine/Chase")
cooldownState = NodePath("NPCsStateMachine/CoolDown")
shootingState = NodePath("NPCsStateMachine/Shoot")
reloadingState = NodePath("NPCsStateMachine/Reload")
talkingState = NodePath("NPCsStateMachine/Talk")
damagingState = NodePath("NPCsStateMachine/Damage")
deathState = NodePath("NPCsStateMachine/Die")
bulletScene = ExtResource("2_sf50l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cv67u")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hvi5a")
texture = ExtResource("2_3qgwk")
flip_h = true
region_enabled = true
region_rect = Rect2(121, 35, 31, 16)

[node name="Areas" type="Node2D" parent="Sprite2D"]

[node name="PlayerDetector" type="Area2D" parent="Sprite2D/Areas"]
collision_layer = 65536
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Areas/PlayerDetector"]
position = Vector2(136, 0)
shape = SubResource("RectangleShape2D_r048q")

[node name="RayCasts" type="Node2D" parent="Sprite2D"]

[node name="WRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 8.5)
target_position = Vector2(12, 0)
collision_mask = 3

[node name="ShootRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 8.5)
target_position = Vector2(150, 0)
collision_mask = 258

[node name="FlyingAltitude" type="RayCast2D" parent="Sprite2D/RayCasts"]
target_position = Vector2(0, 100)

[node name="GunBarrel" type="Marker2D" parent="Sprite2D"]
position = Vector2(8, 8)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/GunBarrel"]
scale = Vector2(0.01, 0.002)
texture = ExtResource("5_r048q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fbn5t")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -2.86102e-06)
scale = Vector2(27.2, 12.8)
rect = Rect2(-14.705883, -17.5, 29.411766, 35)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="VisibleOnScreenNotifier2D"]
rect = Rect2(-14.705883, -17.5, 29.411766, 35)
enable_node_path = NodePath("../..")

[node name="NPCsStateMachine" parent="." node_paths=PackedStringArray("startingState") instance=ExtResource("3_wteq8")]
startingState = NodePath("Idle")

[node name="Idle" type="Node" parent="NPCsStateMachine"]
script = ExtResource("4_s6pod")
animationName = &"Idle"

[node name="Wander" type="Node" parent="NPCsStateMachine"]
script = ExtResource("5_3qgwk")
animationName = &"Idle"

[node name="Chase" type="Node" parent="NPCsStateMachine"]
script = ExtResource("6_wteq8")
cooldownPeriod = 4.0
animationName = &"Idle"

[node name="CoolDown" type="Node" parent="NPCsStateMachine"]
script = ExtResource("7_63y8b")
animationName = &"Idle"

[node name="Shoot" type="Node" parent="NPCsStateMachine"]
script = ExtResource("8_5dooj")
animationName = &"Idle"

[node name="Reload" type="Node" parent="NPCsStateMachine"]
script = ExtResource("9_cufvy")
reloadingTime = 0.5
animationName = &"Idle"

[node name="Talk" type="Node" parent="NPCsStateMachine"]
script = ExtResource("10_ylrrh")
animationName = &"Idle"

[node name="Damage" type="Node" parent="NPCsStateMachine"]
script = ExtResource("11_lvt0o")
animationName = &"Idle"

[node name="Die" type="Node" parent="NPCsStateMachine"]
script = ExtResource("12_v5k5e")
animationName = &"Idle"

[node name="Timers" type="Node" parent="."]

[node name="ShootingTimer" type="Timer" parent="Timers"]

[node name="ReloadingTimer" type="Timer" parent="Timers"]

[node name="CooldownPeriodTimer" type="Timer" parent="Timers"]

[node name="DamagingTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -39.0
offset_top = -32.0
offset_right = 40.0
offset_bottom = -27.0
value = 100.0
nine_patch_stretch = true
tint_progress = Color(0.907709, 0.0900278, 5.77569e-07, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("13_f1h1s")

[node name="DialogueText" type="Label" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -16.0
offset_right = 30.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("14_g2a3x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueTimerProgress" type="TextureProgressBar" parent="UI/DialogueBox"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
value = 100.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("15_gv085")

[node name="DialogueTimer" type="Timer" parent="UI/DialogueBox"]

[node name="EzDialogue" type="Node" parent="UI/DialogueBox"]
script = ExtResource("17_5tgme")
metadata/_custom_type_script = "uid://lngqm66mqljp"

[connection signal="body_entered" from="Sprite2D/Areas/PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Sprite2D/Areas/PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="Timers/ShootingTimer" to="NPCsStateMachine/Shoot" method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="Timers/ReloadingTimer" to="NPCsStateMachine/Reload" method="_on_reloading_timer_timeout"]
[connection signal="timeout" from="Timers/CooldownPeriodTimer" to="NPCsStateMachine/CoolDown" method="_on_cooldown_period_timer_timeout"]
[connection signal="timeout" from="Timers/DamagingTimer" to="NPCsStateMachine/Damage" method="_on_damaging_timer_timeout"]
[connection signal="timeout" from="UI/DialogueBox/DialogueTimer" to="UI/DialogueBox" method="_on_dialogue_timer_timeout"]
